# simple_messenger

./: .gitignore  amvera.json  app.py  pyproject.toml  railway.json  requirements.txt  requirements.txt.txt
templates/: create_group.html  edit_profile.html  index.html  login.html  profile.html  register.html
